# twilio_integration

./: pyproject.toml
twilio_integration/: boot.py  hooks.py
twilio_integration/fixtures/: custom_field.json  property_setter.json
twilio_integration/overrides/: notification.py
twilio_integration/public/js/: Notification.js
twilio_integration/twilio_integration/: api.py  twilio_handler.py
twilio_integration/twilio_integration/doctype/twilio_settings/: twilio_settings.js  twilio_settings.json
twilio_integration/twilio_integration/doctype/whatsapp_campaign/: whatsapp_campaign.py
twilio_integration/twilio_integration/doctype/whatsapp_message/: whatsapp_message.json  whatsapp_message.py
