[project]
name = "twilio_integration"
description = "Custom Frappe Application for Twilio Integration"
authors = [
    { name = "Frappe", email = "developers@frappe.io" }
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]

dependencies = [
    "twilio==6.44.2",
    "pyngrok~=5.1.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017",
    "B018",
    "B023",
    "B904",
    "E101",
    "E402",
    "E501",
    "E741",
    "F401",
    "F403",
    "F405",
    "F722",
    "W191",
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
